{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 191,
  "lineage": "793775a4-04c2-b994-c71b-c3a1ba994a73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046e4437276f50a28",
            "domain": "vpc",
            "id": "eipalloc-046e4437276f50a28",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-20-194-137.compute-1.amazonaws.com",
            "public_ip": "52.20.194.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.interner_gateway_tf",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3491e7512ab3972",
            "domain": "vpc",
            "id": "eipalloc-0f3491e7512ab3972",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-205-126-211.compute-1.amazonaws.com",
            "public_ip": "44.205.126.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.interner_gateway_tf",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "interner_gateway_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:internet-gateway/igw-03349b799a174d580",
            "id": "igw-03349b799a174d580",
            "owner_id": "797856765181",
            "tags": {
              "Name": "interner_gateway_tf"
            },
            "tags_all": {
              "Name": "interner_gateway_tf"
            },
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046e4437276f50a28",
            "connectivity_type": "public",
            "id": "nat-0b3f49209d168c209",
            "network_interface_id": "eni-08f0d1df7e6f0e85e",
            "private_ip": "192.168.0.191",
            "public_ip": "52.20.194.137",
            "subnet_id": "subnet-051f77b320a576a81",
            "tags": {
              "Name": "Nat 1"
            },
            "tags_all": {
              "Name": "Nat 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_subnet.pub1",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3491e7512ab3972",
            "connectivity_type": "public",
            "id": "nat-04b715114ffa97a18",
            "network_interface_id": "eni-0ee14e6742c50b984",
            "private_ip": "192.168.1.106",
            "public_ip": "44.205.126.211",
            "subnet_id": "subnet-099702703d9a5ed48",
            "tags": {
              "Name": "Nat 2"
            },
            "tags_all": {
              "Name": "Nat 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_subnet.pub2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivRout1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:route-table/rtb-02fae2f825a5d099b",
            "id": "rtb-02fae2f825a5d099b",
            "owner_id": "797856765181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3f49209d168c209",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouterTable1"
            },
            "tags_all": {
              "Name": "PrivateRouterTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_nat_gateway.natgw1",
            "aws_subnet.pub1",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivRout2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:route-table/rtb-0005adc948d9f5f00",
            "id": "rtb-0005adc948d9f5f00",
            "owner_id": "797856765181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b715114ffa97a18",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouterTable2"
            },
            "tags_all": {
              "Name": "PrivateRouterTable2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_nat_gateway.natgw2",
            "aws_subnet.pub2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:route-table/rtb-07ec704f692c5ea62",
            "id": "rtb-07ec704f692c5ea62",
            "owner_id": "797856765181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03349b799a174d580",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouterTable"
            },
            "tags_all": {
              "Name": "PublicRouterTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.interner_gateway_tf",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivRouteTableAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000fe7f25e8d2c3a",
            "route_table_id": "rtb-02fae2f825a5d099b",
            "subnet_id": "subnet-081e3b8db6e09a6fd"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_nat_gateway.natgw1",
            "aws_route_table.PrivRout1",
            "aws_subnet.priv1",
            "aws_subnet.pub1",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivRouteTableAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bdbc295c0aeb006",
            "route_table_id": "rtb-0005adc948d9f5f00",
            "subnet_id": "subnet-0853883bc824527b7"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.interner_gateway_tf",
            "aws_nat_gateway.natgw2",
            "aws_route_table.PrivRout2",
            "aws_subnet.priv2",
            "aws_subnet.pub2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRouteTableAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a647e140230fe7",
            "route_table_id": "rtb-07ec704f692c5ea62",
            "subnet_id": "subnet-051f77b320a576a81"
          },
          "dependencies": [
            "aws_internet_gateway.interner_gateway_tf",
            "aws_route_table.PubRout",
            "aws_subnet.pub1",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRouteTableAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03345680a84fad7cc",
            "route_table_id": "rtb-07ec704f692c5ea62",
            "subnet_id": "subnet-099702703d9a5ed48"
          },
          "dependencies": [
            "aws_internet_gateway.interner_gateway_tf",
            "aws_route_table.PubRout",
            "aws_subnet.pub2",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:subnet/subnet-081e3b8db6e09a6fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e3b8db6e09a6fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797856765181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv1A",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "priv1A",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:subnet/subnet-0853883bc824527b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0853883bc824527b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797856765181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv1B",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "priv1B",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:subnet/subnet-051f77b320a576a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051f77b320a576a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797856765181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub1A",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub1A",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:subnet/subnet-099702703d9a5ed48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099702703d9a5ed48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797856765181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub1B",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub1B",
              "kubernets.io/cluster/eks": "shared",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ceea5ea78e10c582"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797856765181:vpc/vpc-0ceea5ea78e10c582",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02fc1243ec69ef984",
            "default_route_table_id": "rtb-0d36ba4de7b1746cb",
            "default_security_group_id": "sg-064a0b3946e15af1d",
            "dhcp_options_id": "dopt-31abc44a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ceea5ea78e10c582",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d36ba4de7b1746cb",
            "owner_id": "797856765181",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}